--- a/index.html
+++ b/index.html
@@ -6,17 +6,15 @@
   <title>โพลสัตว์น่ารัก</title>
   <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    /* วาง CSS ทั้งหมดที่ให้ไว้ในคำตอบก่อนหน้านี้ */
-    /* ⬇ ด้านล่างคือตัวอย่าง CSS ตัดมาบางส่วน */
     * {
       box-sizing: border-box;
     }
     body {
       font-family: 'Prompt', sans-serif;
-      background: linear-gradient(to bottom, #f0f8ff, #ffffff);
+      background: linear-gradient(to bottom, #1c1c1c, #2e2e2e);
       margin: 0;
       padding: 30px;
-      color: #333;
+      color: #e0e0e0;
     }
     .container {
       display: flex;
@@ -25,15 +23,15 @@
       gap: 30px;
     }
     .poll-card, .vote-panel {
-      background-color: white;
+      background-color: #2a2a2a;
       border-radius: 16px;
       padding: 30px;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.07);
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.4);
       width: 100%;
       max-width: 420px;
     }
     .option {
-      background-color: #f1f9ff;
+      background-color: #3a3a3a;
       padding: 15px;
       margin: 10px 0;
       border-radius: 12px;
@@ -41,9 +39,10 @@
       transition: 0.3s;
       text-align: center;
       font-size: 18px;
+      color: #fff;
     }
     .option:hover {
-      background-color: #d6ecff;
+      background-color: #505050;
       transform: translateY(-2px);
     }
     input[type="text"], button {
@@ -52,11 +51,15 @@
       margin-top: 10px;
       font-size: 16px;
       border-radius: 10px;
+      border: none;
+    }
+    input[type="text"] {
+      background-color: #444;
+      color: #fff;
     }
     button {
       background-color: #5cacee;
       color: white;
-      border: none;
       cursor: pointer;
     }
     .vote-panel ul {
@@ -64,10 +67,17 @@
       padding: 0;
     }
     .vote-panel li {
-      background: #f9f9f9;
+      background: #3d3d3d;
       padding: 10px;
       margin-bottom: 5px;
       border-radius: 8px;
+      color: #ccc;
+    }
+    .greeting, .result {
+      color: #ddd;
+    }
+    h2, h3 {
+      color: #ffffff;
     }
   </style>
 </head>
