--- a/index.html
+++ b/index.html
@@ -90,90 +90,168 @@
     #clearButton button:hover {
       background-color: #ff5555;
     }
+
+    /* Popup styles */
+    #popup {
+      display: none;
+      position: fixed;
+      top: 0; left: 0;
+      width: 100vw;
+      height: 100vh;
+      background-color: rgba(0, 0, 0, 0.75);
+      justify-content: center;
+      align-items: center;
+      z-index: 9999;
+    }
+    .popup-box {
+      background: #222;
+      padding: 20px;
+      border-radius: 12px;
+      text-align: center;
+      color: #fff;
+    }
+    .number-grid {
+      display: grid;
+      grid-template-columns: repeat(3, 60px);
+      gap: 10px;
+      justify-content: center;
+      margin-top: 10px;
+    }
+    .number-grid button {
+      font-size: 20px;
+      padding: 15px;
+      border: none;
+      border-radius: 10px;
+      background-color: #444;
+      color: white;
+      cursor: pointer;
+      transition: 0.2s;
+    }
+    .number-grid button:hover {
+      background-color: #5cacee;
+    }
   </style>
 </head>
 <body>
 
-  <div class="container">
-    <div class="poll-card">
-      <h2>คุณระบุเพศสภาพอย่างไร?</h2>
-      <div id="login-area">
-        <input type="text" id="username" placeholder="พิมพ์ชื่อของคุณ...">
-        <button onclick="login()">เข้าสู่ระบบ</button>
-      </div>
-      <div id="poll-area" style="display:none;">
-        <p class="greeting">👋 สวัสดีคุณ <strong id="userDisplay"></strong> กรุณาเลือก:</p>
-        <div class="option" onclick="vote('ผู้ชาย')">👨 ผู้ชาย</div>
-        <div class="option" onclick="vote('ผู้หญิง')">👩 ผู้หญิง</div>
-        <div class="option" onclick="vote('LGBTQ+')">🏳️‍🌈 LGBTQ+</div>
-        <div class="option" onclick="vote('ไม่ระบุเพศ')">⚪ ไม่ระบุเพศ</div>
-        <p class="result" id="result"></p>
-      </div>
+<div class="container">
+  <div class="poll-card">
+    <h2>คุณระบุเพศสภาพอย่างไร?</h2>
+    <div id="login-area">
+      <input type="text" id="username" placeholder="พิมพ์ชื่อของคุณ...">
+      <button onclick="login()">เข้าสู่ระบบ</button>
     </div>
-
-    <div class="vote-panel">
-      <h3>📋 รายชื่อผู้โหวต</h3>
-      <ul id="voteList"></ul>
+    <div id="poll-area" style="display:none;">
+      <p class="greeting">👋 สวัสดีคุณ <strong id="userDisplay"></strong> กรุณาเลือก:</p>
+      <div class="option" onclick="vote('ผู้ชาย')">👨 ผู้ชาย</div>
+      <div class="option" onclick="vote('ผู้หญิง')">👩 ผู้หญิง</div>
+      <div class="option" onclick="vote('LGBTQ+')">🏳️‍🌈 LGBTQ+</div>
+      <div class="option" onclick="vote('ไม่ระบุเพศ')">⚪ ไม่ระบุเพศ</div>
+      <p class="result" id="result"></p>
     </div>
   </div>
 
-  <!-- ปุ่มล้างข้อมูล -->
-  <div id="clearButton">
-    <button onclick="requestClear()">🗑️ ล้างข้อมูลโหวตทั้งหมด</button>
+  <div class="vote-panel">
+    <h3>📋 รายชื่อผู้โหวต</h3>
+    <ul id="voteList"></ul>
   </div>
+</div>
 
-  <script>
-    let currentUser = null;
-    let voteData = JSON.parse(localStorage.getItem("votes")) || {};
+<!-- ปุ่มล้าง -->
+<div id="clearButton">
+  <button onclick="showPopup()">🗑️ ล้างข้อมูลโหวตทั้งหมด</button>
+</div>
 
-    function login() {
-      const username = document.getElementById("username").value.trim();
-      if (!username) {
-        alert("กรุณาใส่ชื่อก่อนโหวต");
-        return;
-      }
-      currentUser = username;
-      document.getElementById("login-area").style.display = "none";
-      document.getElementById("poll-area").style.display = "block";
-      document.getElementById("userDisplay").textContent = currentUser;
+<!-- Popup -->
+<div id="popup">
+  <div class="popup-box">
+    <p>ใส่รหัสผ่าน (2545)</p>
+    <div id="passwordDisplay" style="margin-bottom:10px;">🔒</div>
+    <div class="number-grid" id="numberGrid"></div>
+    <button onclick="cancelPopup()" style="margin-top:10px;">ยกเลิก</button>
+  </div>
+</div>
 
-      if (voteData[currentUser]) {
-        document.getElementById("result").textContent = `คุณเคยเลือก "${voteData[currentUser]}" ไปแล้ว`;
-      }
-      updateVoteList();
+<script>
+  let currentUser = null;
+  let voteData = JSON.parse(localStorage.getItem("votes")) || {};
+  let password = "2545";
+  let enteredPass = "";
+
+  function login() {
+    const username = document.getElementById("username").value.trim();
+    if (!username) {
+      alert("กรุณาใส่ชื่อก่อนโหวต");
+      return;
     }
+    currentUser = username;
+    document.getElementById("login-area").style.display = "none";
+    document.getElementById("poll-area").style.display = "block";
+    document.getElementById("userDisplay").textContent = currentUser;
 
-    function vote(choice) {
-      if (!currentUser) return;
-
-      voteData[currentUser] = choice;
-      localStorage.setItem("votes", JSON.stringify(voteData));
-
-      document.getElementById("result").textContent = `คุณเลือก "${choice}" ขอบคุณที่ร่วมโหวต!`;
-      updateVoteList();
+    if (voteData[currentUser]) {
+      document.getElementById("result").textContent = `คุณเคยเลือก "${voteData[currentUser]}" ไปแล้ว`;
     }
+    updateVoteList();
+  }
 
-    function updateVoteList() {
-      const list = document.getElementById("voteList");
-      list.innerHTML = "";
-      for (let user in voteData) {
-        const li = document.createElement("li");
-        li.textContent = `${user} → ${voteData[user]}`;
-        list.appendChild(li);
-      }
+  function vote(choice) {
+    if (!currentUser) return;
+    voteData[currentUser] = choice;
+    localStorage.setItem("votes", JSON.stringify(voteData));
+    document.getElementById("result").textContent = `คุณเลือก "${choice}" ขอบคุณที่ร่วมโหวต!`;
+    updateVoteList();
+  }
+
+  function updateVoteList() {
+    const list = document.getElementById("voteList");
+    list.innerHTML = "";
+    for (let user in voteData) {
+      const li = document.createElement("li");
+      li.textContent = `${user} → ${voteData[user]}`;
+      list.appendChild(li);
     }
+  }
 
-    function requestClear() {
-      const input = prompt("กรุณาใส่รหัสผ่านเพื่อยืนยันการล้างข้อมูล:");
-      if (input === "2545") {
+  function showPopup() {
+    enteredPass = "";
+    document.getElementById("popup").style.display = "flex";
+    renderNumberPad();
+    document.getElementById("passwordDisplay").textContent = "🔒";
+  }
+
+  function cancelPopup() {
+    document.getElementById("popup").style.display = "none";
+  }
+
+  function renderNumberPad() {
+    const grid = document.getElementById("numberGrid");
+    grid.innerHTML = "";
+    const numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9];
+    numbers.sort(() => Math.random() - 0.5);
+    numbers.forEach(num => {
+      const btn = document.createElement("button");
+      btn.textContent = num;
+      btn.onclick = () => enterDigit(num);
+      grid.appendChild(btn);
+    });
+  }
+
+  function enterDigit(digit) {
+    enteredPass += digit;
+    document.getElementById("passwordDisplay").textContent = "🔒 " + "*".repeat(enteredPass.length);
+    if (enteredPass.length >= password.length) {
+      if (enteredPass === password) {
         localStorage.removeItem("votes");
         alert("✅ ล้างข้อมูลโหวตเรียบร้อยแล้ว!");
         location.reload();
       } else {
-        alert("❌ รหัสผ่านไม่ถูกต้อง");
+        alert("❌ รหัสผิด");
+        cancelPopup();
       }
     }
-  </script>
+  }
+</script>
 
 </body>
 </html>
